<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityManager.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/bg1"
        android:layout_height="500dp">
        <ImageView
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/create_acount"/>
        <ImageView
            android:stateListAnimator="@animator/btn_click_animator"
            android:id="@+id/Register_imgBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_back" />
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="170dp"
            android:background="@drawable/bg3"
            android:layout_height="100dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:text="@string/create_new_account"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <ScrollView
            android:layout_marginTop="230dp"
            android:paddingHorizontal="10dp"
            android:stateListAnimator="@animator/btn_click_animator"
            android:layout_width="match_parent"
            android:background="@drawable/bg4"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/Register_txtMessage"
                    android:layout_marginTop="50dp"
                    android:text="@string/message"
                    android:textColor="@color/error"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:paddingHorizontal="10dp"
                    android:background="@drawable/bg_edit"
                    app:startIconDrawable="@drawable/round_people_outline_24"
                    android:hint="@string/user_name"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Register_edtName"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_edit"
                    android:paddingHorizontal="10dp"
                    app:startIconDrawable="@drawable/baseline_manage_accounts_24"
                    android:hint="@string/account_name"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Register_edtAccount"
                        android:inputType="phone"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="10dp"
                    android:background="@drawable/bg_edit"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Register_edtPassword"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="10dp"
                    android:background="@drawable/bg_edit"
                    app:startIconDrawable="@drawable/baseline_cyclone_24"
                    android:hint="@string/repass_word"
                    app:endIconMode="password_toggle"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Register_edtRepass"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:layout_marginTop="10dp"
                        android:id="@+id/Register_btnRegister"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/register"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:fontFamily="serif"
                        android:elevation="4dp"
                        android:stateListAnimator="@animator/btn_click_animator"
                        android:background="@drawable/custom_btn_login"
                        android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/Register_txtLogin"
                        android:layout_width="wrap_content"
                        android:text="@string/login_here"
                        android:stateListAnimator="@animator/btn_click_animator"
                        android:padding="10dp"
                        android:textColor="@color/teal_700"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</FrameLayout>