<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bg_edit"
    android:layout_height="wrap_content">
   <RelativeLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_height="wrap_content">
       <TextView
           android:id="@+id/item_oder_update_txt_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="10dp"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="10dp"
           android:layout_marginBottom="10dp"
           android:text="@string/update_oder"
           android:textColor="@color/black"
           android:textSize="20sp" />

       <ImageView
           android:id="@+id/item_oder_update_img_cancel"
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:layout_alignParentEnd="true"
           android:layout_marginStart="10dp"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="10dp"
           android:layout_marginBottom="10dp"
           android:src="@drawable/baseline_cancel_24"
           android:stateListAnimator="@animator/btn_click_animator" />
   </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/bg_edit"
            android:hint="@string/quantity"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_oder_update_edt_quantity"
                android:layout_width="match_parent"
                android:inputType="number"
                android:maxLength="6"
                android:backgroundTint="@color/white"
                android:enabled="true"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:hint="@string/price"
            android:background="@drawable/bg_edit"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_oder_update_edt_Price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:enabled="false"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:hint="@string/total"
            android:background="@drawable/bg_edit"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_oder_update_edt_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:enabled="false"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/item_oder_update_btn_delete"
            android:text="delete"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/custom_btn_cancel"
            android:layout_width="150dp"
            android:stateListAnimator="@animator/btn_click_animator"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/item_oder_update_btnSave"
            android:text="Save"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:background="@drawable/custom_btn_blue"
            android:layout_width="150dp"
            android:stateListAnimator="@animator/btn_click_animator"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
</LinearLayout>